--- a/设计模式.md
+++ b/设计模式.md
@@ -245,46 +245,543 @@ class StaticInnerClassSign {
 ### 简单工厂模式
 
 ```java
-/**
- * 水果的接口
- */
-public interface IFruit {
-    /**
-     * 吃水果的方式
-     */
-    void eat();
+package com.mqb.design.factory.simpleFactory;
+public abstract class Product{
+    public abstract void Show();
 }
 ```
 
-两个实现类
+实现类
 
 ```java
-public class Apple implements IFruit{
+
+//具体产品类A
+class  ProductA extends  Product{
+
     @Override
-    public void eat() {
-        System.out.println("苹果需要削皮");
+    public void Show() {
+        System.out.println("生产出了产品A");
     }
 }
-public class Orange implements IFruit{
+
+//具体产品类B
+class  ProductB extends  Product{
+
     @Override
-    public void eat() {
-        System.out.println("橘子需要剥皮");
+    public void Show() {
+        System.out.println("生产出了产品B");
     }
 }
+
+//具体产品类C
+class  ProductC extends  Product{
+
+    @Override
+    public void Show() {
+        System.out.println("生产出了产品C");
+    }
+}
+
+```
+
+
+
+```java
+class  Factory {
+    public  Product manufacture(String productName){
+    //工厂类里用switch语句控制生产哪种商品；
+    //使用者只需要调用工厂类的静态方法就可以实现产品类的实例化。
+        return switch (productName) {
+            case "A" -> new ProductA();
+            case "B" -> new ProductB();
+            case "C" -> new ProductC();
+            default -> null;
+        };
+    }
+}
+
+```
+
+
+
+使用
+
+```java
+package com.mqb.design.factory.simpleFactory;
+
+/**
+ * 简单工厂模式
+ *
+ * @author maqingbo
+ * @date 2023/2/25 13:51
+ * @email qingbo.my@gmail.com
+ */
+public class SimpleFactory {
+    public static void main(String[] args) {
+        Factory mFactory = new Factory();
+
+        //客户要产品A
+        try {
+//调用工厂类的静态方法 & 传入不同参数从而创建产品实例
+            mFactory.manufacture("A").Show();
+        } catch (NullPointerException e) {
+            System.out.println("没有这一类产品");
+        }
+
+        //客户要产品B
+        try {
+            mFactory.manufacture("B").Show();
+        } catch (NullPointerException e) {
+            System.out.println("没有这一类产品");
+        }
+
+        //客户要产品C
+        try {
+            mFactory.manufacture("C").Show();
+        } catch (NullPointerException e) {
+            System.out.println("没有这一类产品");
+        }
+
+        //客户要产品D
+        try {
+            mFactory.manufacture("D").Show();
+        } catch (NullPointerException e) {
+            System.out.println("没有这一类产品");
+        }
+    }
+}
+```
+
+
+
+### 工厂方法模式
+
+当一个工厂需要新生产另一种产品时可以考虑使用工厂模式
+
+工厂的抽象类
+
+```java
+/**
+ * 抽象工厂类，定义具体工厂的公共接口
+ */
+public interface Factory{
+    /**
+     * 制造
+     * @return
+     */
+    public abstract Product manufacture();
+}
+```
+
+
+
+需要生产的产品的接口
+
+```
+package com.mqb.design.factory.factoryMethod;
+
+public interface  Product{
+    /**
+     * 定义具体产品的公共接口；
+     */
+    public  void show();
+}
+```
+
+
+
+产品
+
+```java
+package com.mqb.design.factory.factoryMethod;
+
+//具体产品A类
+public class  ProductA implements   Product{
+
+    @Override
+    public void show() {
+        System.out.println("生产出了产品A");
+
+    }
+}
+
+//具体产品B类
+class  ProductB implements   Product{
+
+    @Override
+    public void show() {
+        System.out.println("生产出了产品B");
+    }
+
+}
+
+```
+工厂的两个实现类，分别生产A和B产品
+```java
+package com.mqb.design.factory.factoryMethod;
+
+//工厂A类 - 生产A类产品
+public class  FactoryA implements Factory{
+
+    @Override
+    public Product manufacture() {
+        return new ProductA();
+    }
+}
+
+class  FactoryB implements Factory{
+
+    @Override
+    public Product manufacture() {
+        return new ProductB();
+    }
+}
+
 ```
 
 使用
 
 ```java
-public class SimpleFactory {
-    public static void main(String[] args) {
-        IFruit fruit = new Apple();
-        fruit.eat();
+public static void main(String[] args){
+    //客户要产品A
+    Factory mFactoryA = new FactoryA();
+    mFactoryA.manufacture().show();
+
+    //客户要产品B
+    Factory mFactoryB = new FactoryB();
+    mFactoryB.manufacture().show();
+}
+```
+
+
+
+## 抽象工厂模式
+
+![image-20230225214216283](asset/设计模式/pic/image-20230225214216283.png)
+工厂接口
+```java
+package com.mqb.design.factory.abstractFactory;
+
+/**
+ * @author maqingbo
+ * @date 2023/2/25 21:28
+ * @email qingbo.my@gmail.com
+ */
+public interface Factory {
+    /**
+     * 生产手机
+     * @return
+     */
+    Phone productPhone();
+
+    /**
+     * 生产耳机
+     * @return
+     */
+    Earphone productEarphone();
+}
+```
+手机接口
+```java
+package com.mqb.design.factory.abstractFactory;
+
+/**
+ * @author maqingbo
+ * @date 2023/2/25
+ * @email qingbo.my@gmail.com
+ */
+public interface Phone {
+    /**
+     * 开机
+     */
+    void start();
+}
+```
+
+
+耳机接口
+```
+package com.mqb.design.factory.abstractFactory;
+
+/**
+ * 耳机
+ * @author maqingbo
+ * @date 2023/2/25
+ * @email qingbo.my@gmail.com
+ */
+public interface Earphone {
+    /**
+     * 耳机品牌
+     */
+    void show();
+}
+```
+
+两个工厂,分别是华为工厂和苹果工厂,分别生产各自的手机和耳机
+
+**苹果**
+
+```java
+package com.mqb.design.factory.abstractFactory.apple;
+
+import com.mqb.design.factory.abstractFactory.Factory;
+import com.mqb.design.factory.abstractFactory.Earphone;
+import com.mqb.design.factory.abstractFactory.Phone;
+
+/**
+ * @author maqingbo
+ * @date 2023/2/25 21:35
+ * @email qingbo.my@gmail.com
+ */
+public class AppleFactory implements Factory {
+    @Override
+    public Phone productPhone() {
+        return new IPhone();
+
+    }
+
+    @Override
+    public Earphone productEarphone() {
+        return new AirPods();
     }
 }
 ```
 
-## 抽象工厂模式
+
+
+```java
+package com.mqb.design.factory.abstractFactory.apple;
+
+import com.mqb.design.factory.abstractFactory.Phone;
+
+/**
+ * @author maqingbo
+ * @date 2023/2/25 21:36
+ * @email qingbo.my@gmail.com
+ */
+public class IPhone implements Phone {
+    @Override
+    public void start() {
+        System.out.println("iPhone 14 phone");
+    }
+}
+```
+
+```java
+package com.mqb.design.factory.abstractFactory.apple;
+
+import com.mqb.design.factory.abstractFactory.Earphone;
+
+/**
+ * @author maqingbo
+ * @date 2023/2/25 21:36
+ * @email qingbo.my@gmail.com
+ */
+public class AirPods implements Earphone {
+    @Override
+    public void show() {
+        System.out.println("AirPods Max");
+    }
+}
+```
+
+**华为**
+
+```java
+package com.mqb.design.factory.abstractFactory.huawei;
+
+import com.mqb.design.factory.abstractFactory.Factory;
+import com.mqb.design.factory.abstractFactory.Earphone;
+import com.mqb.design.factory.abstractFactory.Phone;
+
+/**
+ * @author maqingbo
+ * @date 2023/2/25 21:32
+ * @email qingbo.my@gmail.com
+ */
+public class HuaweiFactory implements Factory {
+    @Override
+    public Phone productPhone() {
+        return new HuaweiPhone();
+    }
+
+    @Override
+    public Earphone productEarphone() {
+        return new HuaweiEarphone();
+    }
+}
+```
+
+
+
+```java
+package com.mqb.design.factory.abstractFactory.huawei;
+
+import com.mqb.design.factory.abstractFactory.Earphone;
+
+/**
+ * @author maqingbo
+ * @date 2023/2/25 21:34
+ * @email qingbo.my@gmail.com
+ */
+public class HuaweiEarphone implements Earphone {
+    @Override
+    public void show() {
+        System.out.println("HUAWEI FreeBuds Pro 2");
+    }
+}
+```
+
+
+
+```java
+package com.mqb.design.factory.abstractFactory.huawei;
+
+import com.mqb.design.factory.abstractFactory.Phone;
+
+/**
+ * @author maqingbo
+ * @date 2023/2/25 21:33
+ * @email qingbo.my@gmail.com
+ */
+public class HuaweiPhone implements Phone {
+    @Override
+    public void start() {
+        System.out.println("HUAWEI Mate 50 Pro");
+    }
+}
+```
+
+
+
+测试
+
+```java
+public static void main(String[] args) {
+    Factory huaweiFactory = new HuaweiFactory();
+    Earphone earphone = huaweiFactory.productEarphone();
+    Phone phone = huaweiFactory.productPhone();
+    phone.start();
+    earphone.show();
+
+
+    System.out.println("========================");
+
+
+    Factory appleFactory = new AppleFactory();
+    Earphone appleEarphone = appleFactory.productEarphone();
+    Phone applePhone = appleFactory.productPhone();
+    appleEarphone.show();
+    applePhone.start();
+}
+```
+
+后续如果想增加产品族,或者是拓展产品等级,参考如下方式
+
+**增加产品族**
+
+需要修改顶层的工厂,如果苹果和华为都需要生产平板,那么需要在Factory接口增加生产平板的接口,并且还要有一个平板的产品接口实现类
+
+```java
+public interface Pad {
+    /**
+     * 屏幕大小
+     */
+    void size();
+}
+```
+
+```java
+public interface Factory {
+    /**
+     * 生产手机
+     *
+     * @return
+     */
+    Phone productPhone();
+
+    /**
+     * 生产耳机
+     *
+     * @return
+     */
+    Earphone productEarphone();
+
+    default Pad productPad() {
+        return null;
+    }
+}
+```
+
+
+
+**拓展产品等级**
+
+
+
+小米也可以生产手机,耳机,平板,那么小米直接实现Factory,Phone,Earphone,Pad接口即可
+
+
+
+## 建造者模式
+
+```java
+public class User {
+    private final String firstName;
+    private final String lastName;
+    private final int age;
+    private final String phone;
+    private final String address;
+
+    private User(UserBuilder builder) {
+        this.firstName = builder.firstName;
+        this.lastName = builder.lastName;
+        this.age = builder.age;
+        this.phone = builder.phone;
+        this.address = builder.address;
+    }
+
+    public static UserBuilder builder() {
+        return new UserBuilder();
+    }
+
+    public static class UserBuilder {
+        private String firstName;     // 必传参数
+        private String lastName;      // 必传参数
+        private int age;              // 可选参数
+        private String phone;         // 可选参数
+        private String address;       // 可选参数
+
+        public UserBuilder() {
+
+        }
+
+        public UserBuilder age(int age) {
+            this.age = age;
+            return this;
+        }
+
+        public UserBuilder phone(String phone) {
+            this.phone = phone;
+            return this;
+        }
+
+        public UserBuilder address(String address) {
+            this.address = address;
+            return this;
+        }
+
+        public User build() {
+            return new User(this);
+        }
+
+    }
+}
+```
+
+
+
+
 
 
 
